--- a/Docs/Styles/Style.css
+++ b/Docs/Styles/Style.css
@@ -89,6 +89,7 @@
     z-index: -999;
   }
 }
+
 #showOnHoverparent:hover {
   #showOnHoverChild {
     z-index: 999;
@@ -97,7 +98,15 @@
   }
 }
 
-.relevance{
+.relevance {
   clip-path: polygon(14% 0, 100% 0%, 100% 100%, 0 100%, 0 61%);
 
+}
+
+
+#articleHover:hover {
+  transition: 200ms all;
+  img {
+    transform: scale(1.2);
+  }
 }
